# TFM-UNIR

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.gh-img.yml  docker-compose.yml  main.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docker-ci.yml
contracts/: AccessControl.sol  MultiVuln.sol
docs-TFM-UNIR/: Ataques reales en blockchain.md  Bridges y Cross-Chain.md  Ejecucion-y-Resultados-Herramientas.md  Entorno virtual Python uv.md  Fundamentos blockchain.md  Módulos.md  Principales tecnologías.md  Propuestas TFM.md  desarrollo_contribucion.md  documento_final.md
docs-TFM-UNIR/.obsidian/: workspace.json
docs-TFM-UNIR/Desarrollo/: Documentación del Entorno CI-CD: Automatización con GitHub Actions.md  Estructura paquete evmaudit.md  Funciones librería.md  Guía de Despliegue en Cloud (Railway) y Optimización de Recursos.md  Proceso de Dockerización de EVMAudit.md  Publicar en pypi.md
docs-TFM-UNIR/Entrega/: 0. Abstract + Coordinación.md  1. Introducción.md  2.  Estado del arte.md  3. Objetivos concretos y metodología de trabajo.md  4. Desarrollo específico de la contribución.md  5. Conclusiones y trabajo futuro.md  Referencias bibliográficas.md  Z0 - Anexo A Ejemplos de vulnerabilidades.md  Z1 - Anexo B Entorno virtual Python.md  Z2 - Anexo C Distribucion mediante PYPi.md  Z3 - Anexo D Docker.md  (+4 more)
mythril/: pyproject.toml
slither/: INSTALL.md  README.md  USAGE.md  analyze_contract.py  create_jsons.py  main.py  pyproject.toml  test_contracts.py
webapp/: README.md  app.py  jobs.py  paths.py  pdf_export.py
(+168 files in other folders)
