[project]
name = "tfm-unir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eth>=0.0.1",
    "fastapi>=0.136.3",
    "mythril>=0.24.8",
    "setuptools<70.0.0",
    "slither-analyzer>=0.9.2",
    "solc-select>=1.2.0",
]

[tool.uv.workspace]
members = [
    "evmaudit",
]
